LMS: fixing contrast on profile upload image button

--- a/lms/static/sass/base/_mixins.scss
+++ b/lms/static/sass/base/_mixins.scss
@@ -39,7 +39,7 @@
 
 @mixin show-hover-state() {
     opacity: 1;
-    background-color: $shadow-d2;
+    background-color: $black;
     border-radius: ($baseline/4);
 }
 
